# cpprecipes

./: CMakeLists.txt  README.md  main.cpp
consts/: CMakeLists.txt  main.cpp
templates/: main.cpp
